--- a/kubinec_model_preprint.Rmd
+++ b/kubinec_model_preprint.Rmd
@@ -77,7 +77,7 @@ knitr::opts_chunk$set(warning=F,message=F,dev="png")
 
 # whether to run model (it will take a few hours) or load saved model from disk
 
-run_model <- F
+run_model <- T
 
 # whether to use fresher coronanet policy data
 
@@ -720,7 +720,7 @@ count_pol_covidamp_wide <- spread(select(ungroup(count_pol_covidamp_sum),-type),
 
 # combined <- left_join(combined, count_pol_sum,by=c("state"="province","month_day"))
 
-combined <- left_join(combined, count_pol_covid_amp_wide,
+combined <- left_join(combined, count_pol_covidamp_wide,
                       by=c("state"="province","month_day"))
 
 # add in civiqs
@@ -785,12 +785,11 @@ combined <- group_by(combined,state) %>%
               "transit",
               "workplaces",
               "Health Resources",
-              "Health Testing",
-              "Mask Restrictions",
-              "Restriction and Regulation of Businesses",
-              "Restrictions of Mass Gatherings",
-              "Quarantine",
-              "Restriction and Regulation of Government Services",
+              "Contact Tracing",
+              "Masking",
+              "Travel",
+              "Emergency",
+              "Welfare",
               "Social Distancing",
               "sum_prot",
               "trendline_approve",
@@ -1023,14 +1022,13 @@ just_data <- select(ungroup(combined),month_day,state,state_pop,trump,air="Air P
                       gdp,
                     density,
                     trump_int,
-                      mask_pol="Mask Restrictions",
+                      mask_pol="Masking",
                       resources="Health Resources",
-                      testing_cap="Health Testing",
-                      quarantine="Quarantine",
-                      business="Restriction and Regulation of Businesses",
-                    govt_services="Restriction and Regulation of Government Services",
-                    mass_gathering="Restrictions of Mass Gatherings",
+                      testing_cap="Contact Tracing",
+                      emergency="Emergency",
+                    travel="Travel",
                     social_distance="Social Distancing",
+                    welfare="Welfare",
                     sum_prot,
                     mask_wear,
                       trendline_approve,
@@ -1049,36 +1047,36 @@ sds_mean <- lapply(select(just_data,-month_day,-state_pop,-state), function(c) {
 
 just_data <- just_data %>% 
     mutate_at(vars(-month_day,-state_pop,-state), ~as.numeric(scale(.))) %>% arrange(state,month_day) %>% 
-  mutate(int_lockdown=quarantine*outbreak_time,
-         int_business=business*outbreak_time,
+  mutate(int_testing_cap=testing_cap*outbreak_time,
          int_social=social_distance*outbreak_time,
-         int_govt=govt_services*outbreak_time,
-         int_gather=mass_gathering*outbreak_time,
+         int_masking=mask_pol*outbreak_time,
+         int_travel=travel*outbreak_time,
+         int_resources=resources*outbreak_time,
          trump_int=trump*trendline_approve)
 
 covs <- select(ungroup(just_data),-state,-state_pop,-month_day,-outbreak_time,
-               -int_lockdown,
-               -int_business,
+               -int_testing_cap,
+               -int_masking,
                -int_social,
-               -int_gather,
-               -int_govt,
-               -business,
-               -quarantine,
-               -govt_services,
-               -mass_gathering,
-               -social_distance) %>% as.matrix
+               -int_travel,
+               -int_resources,
+               -testing_cap,
+               -mask_pol,
+               -social_distance,
+               -travel,
+               -resources) %>% as.matrix
 
 mobility <- select(ungroup(combined),month_day,state,retail:residential) %>% arrange(state,month_day)
 
 covs_mob <- select(ungroup(mobility),-state,-month_day) %>% as.matrix
 
-lockdown <- select(ungroup(just_data),state,month_day,quarantine,business,
-                   mass_gathering,social_distance,govt_services,
-                   int_lockdown,
-                   int_business,
-                   int_social,
-                   int_gather,
-                   int_govt) %>% arrange(state,month_day)
+lockdown <- select(ungroup(just_data),state,month_day,testing_cap,
+                   mask_pol,social_distance,travel,resources,
+                   int_testing_cap,
+                  int_masking,
+                  int_social,
+                  int_travel,
+               int_resources) %>% arrange(state,month_day)
 
 covs_lock <- select(ungroup(lockdown),-state,-month_day)
 
@@ -1133,8 +1131,8 @@ real_data <- list(time_all=length(unique(combined$month_day)),
                  suppress=covs,
                  suppress2=covs[,-which(colnames(covs)=="trendline_extremely_concerned")],
                  mobility=scale(covs_mob),
-                 lockdown=covs_lock,
-                 states=select(state,-state))
+                 lockdown=as.matrix(covs_lock),
+                 states=as.matrix(select(state,-state)))
 
 saveRDS(real_data,"real_data.rds")
 
@@ -1173,13 +1171,13 @@ if(run_model) {
   pan_model_scale <- cmdstan_model("corona_tscs_betab_mix_prior.stan",
                                    cpp_options=list(stan_threads=TRUE))
   
-   us_fit_scale_mod <- pan_model_scale$sample(data=real_data,chains=2,
-                           iter_warmup=500,iter_sampling=500,
-                           threads_per_chain = 16,
+   us_fit_scale_mod <- pan_model_scale$sample(data=real_data,
+                           threads_per_chain = 4,
                            init=init_vals,
-                           max_treedepth = 15,
-                           output_dir=".", validate_csv = FALSE,
-                           parallel_chains=2)
+                           max_treedepth = 16,
+                           parallel_chains=4)
+   
+   us_fit_scale_mod$save_object("data/us_fit_scale_mod.rds")
    
   
   us_fit_scale <- rstan::sflist2stanfit(lapply(us_fit_scale_mod$output_files(),
